Fixed overflow locks on sponsors page

--- a/css/base.scss
+++ b/css/base.scss
@@ -87,9 +87,6 @@ textarea {
     color: #000;
     padding: 0.2em 0;
 }
-body {
-    overflow: hidden !important;
-}
 
 .wrapper {
     width: 90%;
