--- a/css/home.scss
+++ b/css/home.scss
@@ -58,7 +58,8 @@
     bottom: 0;
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
     visibility: hidden;
 }
 .sponsors-footer {
